# lens-eval

./: .gitignore  DOCS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: Publish.yml
examples/: rag_rerank.py
lens_eval/: __init__.py  _validate.py  cli.py  diagnostics.py  encoders.py  errors.py  lens.py  persistence.py  report.py  selection.py
lens_eval/combiners/: __init__.py  base.py  ebm.py  gbm.py  glm.py  glm_interactions.py
lens_eval/configs/: __init__.py  naturalness_centroid_natureencoder.json
tests/: conftest.py  test_cli.py  test_combiners.py  test_diagnostics.py  test_encoders.py  test_lens.py  test_persistence.py  test_selection.py  test_target_inference.py  test_validate.py
