[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lens-eval"
version = "0.3.2"
description = "Interpretable multi-dimension text quality metric with combiner"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "Foudil Chebbour", email = "foudil.chebbour@gmail.com" }]
keywords = ["RAG", "reward model", "llm-as-a-judge", "text-quality", "text evaluation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
encoders = [
    "torch>=2.0",
    "transformers>=4.30",
    "sentence-transformers>=2.2",
]
statsmodels = ["statsmodels>=0.14"]
ebm = ["interpret>=0.5"]
gbm = ["lightgbm>=4.0"]
report = ["jinja2>=3.1"]
cli = []
all = [
    "torch>=2.0",
    "transformers>=4.30",
    "sentence-transformers>=2.2",
    "statsmodels>=0.14",
    "interpret>=0.5",
    "lightgbm>=4.0",
    "jinja2>=3.1",
]

[project.scripts]
lens-eval = "lens_eval.cli:main"

[project.urls]
Homepage = "https://github.com/foudil09/lens-eval"

[tool.setuptools.packages.find]
where = ["."]
include = ["lens_eval*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
lens_eval = ["configs/*.json"]
